@@ -19,6 +19,7 @@ Modules:
 - NanoScan (new): Imports NanoScan XML files.
 - Raw XYZ (new): Imports raw XYZ data and regularizes them to a grid.
 - NT-MDT: MDA frame support was improved.
+- NetCDF: Can read GXSM files with data in "FloatField" instead of "H".
 - Statistical quantities: The masked area can also be excluded.
 - Seiko: Supports more file types (with magic header SPIZ000AFM).
 - Pixmap export: TIFFs are written in binary mode, fixing broken exported
